--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.6.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "nanoid": "^2.1.11",
     "uuid": "^9.0.1"
   }
